<resources>
    <string name="app_name">Tenant Management System</string>
    <string name="screen_title">TENANT MANAGEMENT SYSTEM</string>
    <string name="tenant_name_label">Tenant Name</string>
    <string name="tenant_name_hint">Enter tenant name</string>
    <string name="phone_label">Phone Number</string>
    <string name="phone_hint">Enter phone number</string>
    <string name="rent_hint">Enter Rent Paid</string>
    <string name="save">SAVE</string>
    <string name="saved_tenant_hint">Saved tenant will appear here</string>
    <string name="saved_name_hint">Tenant name will appear here</string>
    <string name="tenant_name_required">Tenant name is required</string>
</resources>
